--- a/src/main/resources/assets/mechina_addon/lang/en_us.json
+++ b/src/main/resources/assets/mechina_addon/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "block.mechina_addon.inputsignalblock": "Redstone I/O Signal Block",
   "block.mechina_addon.redstone_interlocking_block": "Redstone Interlocking Block",
+  "block.mechina_addon.eg": "EG",
   "block.mechina_addon.remote_redstone_block_on": "Input signal block/on",
   "block.mechina_addon.remote_redstone_block": "Remote Redstone Block",
   "advancements.you_can_advence_redstone_lore.title": "You Can Advence Redstone Lore?",
